--- a/app/ux/globals.css
+++ b/app/ux/globals.css
@@ -1,26 +1,25 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --verdeOscuro: #0d5e4aff;
+  --verdeClaro: #4c956cff;
+  --blanco: #FDFDFC;
+  --melon: #ffc9b9ff;
+  --orange: #d68c45ff;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-verdeOscuro: var(--verdeOscuro);
+  --color-verdeClaro: var(--verdeClaro);
+  --color-blanco: var(--blanco);
+  --color-melon: var(--melon);
+  --color-orange: var(--orange);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--color-salvia);
 }
