refactor: se aplicó el Principio de Responsabilidad Única (SRP) al Header, separando la lógica en un hook personalizado y modularizando la interfaz

--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -21,5 +21,9 @@
 
 
 body {
-  background-color: var(--color-salvia);
+  background-color: var(--blanco);
+}
+
+.hero {
+  background-image: url("/spaHero.jpg");
 }
