feat(ServiciosDestacados): Se crea el componente de servicios, la data servicios.ts, se dan estilos css, se crea separador

--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -22,8 +22,13 @@
 
 body {
   background-color: var(--blanco);
+  @apply text-gray-500
 }
 
 .hero {
   background-image: url("/spaHero.jpg");
+}
+
+@utility marca {
+  @apply font-bold uppercase;
 }
