Style(globals.css): se ajusta el color verdeClaro para cumplir con la accesibilidad

--- a/app/style/globals.css
+++ b/app/style/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --verdeOscuro: #0d5e4a;
-  --verdeClaro: #4c956c;
+  --verdeClaro: #3d7655;
   --blanco: #fdfdfc;
   --melon: #ffc9b9;
   --orange: #573c27;
